# veilhook

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: VeilhookDeps.cmake
include/veilhook/: cave_alloc.hpp  decode.hpp  hwbp_manager.hpp  mutation_seed.hpp  mutation_seed.hpp.in  obfuscation.hpp  reloc.hpp  scanner.hpp  syscalls.hpp  thread_patch.hpp  veh_hub.hpp  veilhook.hpp  xorstr.hpp
include/veilhook/analyzer/: detector.hpp  prologue.hpp
include/veilhook/hook/: guard.hpp  inline.hpp  mid.hpp  phantom.hpp  status.hpp  ud2.hpp  vmt.hpp
source/: analyzer_detector.cpp  analyzer_prologue.cpp  cave_alloc.cpp  decode.cpp  hook_guard.cpp  hook_inline.cpp  hook_mid.cpp  hook_phantom.cpp  hook_ud2.cpp  hook_vmt.cpp  hwbp_manager.cpp  reloc.cpp  syscalls.cpp  thread_patch.cpp  veh_hub.cpp
tests/: main.cpp  test_detector.cpp  test_hooks.cpp  test_main.cpp
